# breaking-the-mold

./: .gdbinit  .gitignore  .gitmodules  .luacheckrc  .sync  CLAUDE.md  Makefile  NOTES.md  README.md  SLES_010.90.d  SLES_010.90.jsonnet  SLES_010.90.ld  SLES_010.90.yaml  a.out  ctx.c  ctx.c.m2c  diff_settings.py  flake.nix  sgconfig.yml  sles_010.90.yaml  symbol_addrs.txt  undefined_funcs.txt  undefined_funcs_auto.txt  undefined_syms.txt  undefined_syms_auto.txt
port/: CMakeLists.txt  CMakePresets.json  README.md
port/decomp/: _autoaddrmap.c  _autoglobals.c  _autostubs.c
port/decomp/anim/: ApplyPendingSpriteState.c  EntityApplyMovementCallbacks.c  EntityProcessCallbackQueue.c  EntitySetCallback.c  EntitySetState.c  FindFrameIndexByValue.c  StepAnimationSequence.c  TickEntityAnimation.c  UpdateEntityRender.c  UpdateParallaxScrollWithWrap_Medium.c  UpdateSpriteFrameData.c  parallax_ticks.c
port/decomp/blb/: AddEntityToSortedRenderList.c  AddPlayerOrbs.c  AddSwirlys.c  AddToUpdateQueue.c  ChangeRenderZOrder.c  CheckPointCollisionAndNotify.c  CreateMenuEntities.c  DeferredEntityRemoval.c  DispatchEventToCollidingEntity.c  EnableDemoPlaybackMode.c  EntityRemoval.c  EntityTickLoopWithCamera.c  EntityTick_DigitDisplayUpdate.c  EntityTick_PlatformRideIdle.c  FreeEntityLists.c  InitEntity_8c510186.c  InitMenuEntityWithVtable.c  InitTimerDisplayEntity.c  IsEntityOffScreen_EntityLoop.c  LoadBLBHeader.c  PlatformInterpolatePosition.c  PlatformRideComplete.c  PlatformRideStartDown.c  PlatformRideStartUp.c  RemoveEntityFromAllLists.c  RemoveEntityFromUpdateQueue.c  RemoveFromTickList.c  RenderEntities.c  SetCameraPositionDirect.c  SpawnOnScreenEntities.c  UpdateCameraPositionSmooth.c  UpdateDigitDisplay.c  UpdateInputState.c  anim_palette_list.c  anim_tile_entities.c  entity_asset501.c  entity_lists.c  initPlayerState.c  layer_init.c  tile_attr_query.c  (+2 more)
port/decomp/blbacc/: DecodeRLESpriteCore.c  FindSpriteInTOC.c  InitSpriteContext.c  LoadAssetContainer.c  LookupSpriteById.c  sprite_decode.c
port/decomp/boot/: game_boot.c
port/decomp/bosses/: EntityCheckTriggerZone.c  EntityCollision_SpawnSwitchBlock.c  EntityTick_InterpolateTimedPath.c  GenericSpriteEntityTickCallback.c  InitGenericSpriteEntity.c  InterpolateTimedPathPosition.c
port/decomp/data/: clayball.rodata.c  entity_callback_table.c  gamestate_vtable.c  gfx.rodata.c  hud.rodata.c  menu_spawn_data.c  player_spawn_data.c  player_vtable.c  slope_table.c  sprite_def_lists.c  vehicle.rodata.c
port/decomp/decor/: DecorEntityTickWithOffscreenCheck.c  EntityTick_EasedMovementInterpolation.c  InitDecorEntityWithScreenOffset.c  InitPathFollowingDecorEntity.c  SpawnDecorParticleEffect.c  UpdateDecorEntityTriggerColors.c  fsm_event.h
port/decomp/effects/: DebrisParticlePhysicsTick.c  InitAlternateEntity.c  InitDebrisParticleEntity.c  InitParticleEntity.c  InitScaledMenuEntityWithChild.c  RenderRippleExpandEffect.c  Render_RotatingStarEffect.c
port/decomp/enemies/: CollectibleSparkleTickCallback.c  CollectibleTickCallback.c  CreateCameraEntity.c  EntityEventHandler0x1001_1002_1008.c  EntityEventHandlerTimerCountdown.c  EntityEventHandlerWithDelayedWalk.c  EntityFloatingWithCollisionTick.c  EntityStateSetRandomBehavior.c  InitCheckpointEntity.c  InitEntityWithDeathSpawn.c  InitIndexedSpriteEntity.c  InitSwitchBlockEntity.c  ProjectilePathFollowerTick.c  SoundEmitterWithPanningTick.c  SpawnCollectibleParticles.c  TeleporterExitState.c  TeleporterPortalEventHandler.c  TeleporterTransitionTickCallback.c  collectible_inits.c
port/decomp/entinit/: SpawnEntitiesAlternateSystem.c  entity_type_remap.c
port/decomp/entity/: AddToXPositionList.c  AllocSpriteRenderContext.c  CalculateEntityScreenBounds.c  CheckEntityPointCollisionWithOffsets.c  CreateMultiFrameRenderContext.c  EntityUpdateCallback.c  InitEntityAnimationState.c  InitEntitySprite.c  InitEntityStruct.c  InitEntityWithSprite.c  InitSpriteContextDefaults.c  IsEntityOffScreen.c  IsEntityOffScreenY.c  SetupEntityScaleCallbacks.c
port/decomp/finn/: CreateGlidePlayerEntity.c  FinnSubentityUpdatePositionFromParent.c  finn_port.c
port/decomp/gamecd/: LoadGameAssetLocations.c  ProcessCDStreamState.c
port/decomp/gfx/: gfx_port.c  render_core.c
port/decomp/gstate/: InitGameState.c
port/decomp/hud/: EntityCollision_HUDItemActivate.c  UpdateHUDEntityVisibility.c  hud_wrapper.c
port/decomp/layer/: CLUTPaletteCycleTickCallback.c  FindOrderingTableSlotById.c  GetSpriteFrameDataByIndex.c  InitTileLayerPrimitives.c  LoadSpriteFramesToVRAM.c  RenderTilemapWithWrapAround.c  SetupSpriteFromFrame.c  layer_render_ctx.c  layer_render_list.c  tile_vram.c  tilemap_prims.c  tilemap_scroll.c
port/decomp/level/: LevelDataParser.c
port/decomp/lvlload/: GameModeCallback.c  InitializeAndLoadLevel.c  movie_stub.c  spawn_player.c
port/decomp/main/: ProcessDebugMenuInput.c
port/decomp/mem/: memset_entrypoint.c
port/decomp/menu/: AttachCursorToButton.c  MenuActivateButtonWithReset.c
port/decomp/passwd/: InitMenuEntity.c  InitMenuStage1.c  MenuInputHandler.c  MenuTickCallback.c
port/decomp/pickups/: CollectibleOrbTickCallback.c  CollectibleYellowBirdTickCallback.c  EntityRenderWithScaledPosition.c  InitClayballWithRandomColor.c  InitPhartHeadCollectible.c  TriggerCollectible100CTickCallback.c  pickup_inits.c
port/decomp/player/: CheckWallCollision.c  CreatePlayerEntity.c  IsEntityNearSoundTrigger.c  PlayerApplyPositionWithCollision.c
port/decomp/playst/: CreateHaloEntity.c  PlayerCallback_FallInputHandler.c  PlayerCallback_FallingPhysicsMain.c  PlayerCallback_HandleMovementAndCollision.c  PlayerCallback_HorizontalWallCollision.c  PlayerCallback_IdleInputHandler.c  PlayerCallback_JumpInputAndCounters.c  PlayerCallback_JumpTickHandler.c  PlayerCallback_JumpWallCollisionInput.c  PlayerState_Death.c  (+23 more)
port/include/: LIBAPI.H  LIBCD.H  LIBETC.H  LIBGPU.H  LIBGTE.H  LIBPAD.H  LIBSPU.H  port_config.h  port_hal.h  port_runtime.h  psyq_pc.h
port/spec/: bios.c  cd_files.c  gpu_gl.c  gte.c  hal_stubs.c  host_main.c  pad_sdl.c  port_boot.c  port_heap.c  port_runtime.c  port_trace.c  spu_sdl.c
(+1041 files in other folders)
